2003-01-02  Tim Perdue <tim@gforge.org>

	* Complete rewrite of doc mgr in GForge coding guidelines.

2003-01-02  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/survey/adminedit_survey.php: sanity checks when posting
	changes.
	* www/themes/savannah/SavannahTheme.class: missing close quotes.

2003-01-01  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/themes/savannah/menu.php: new file.
	* www/themes/savannah/SavannahTheme.class: new file.
	* www/themes/savannah_*/Theme.class: make these derived classes of
	SavannahTheme.

2002-12-31  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/include/Layout.class: optionally add "Show Source" link to
	bottom of each page.
	* www/source.php: new file.
	* etc/local.inc: add $sys_show_source option.
	* db/20021223.sql: Patch 97: drop project_task_vw before create.
	* www/pm/calendar.php: change output to valid XHTML 1.0 with HTML
	4.0 compatability.

2002-12-30  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/pm/index.php, www/pm/admin/index.php: Bug 96: fix spuriours
	errors when no subprojects are defined.
	* common/include/User.class: Fix pg_atoi problem.

2002-12-29  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/pm/calendar.php: rewrite.
	* www/include/languages/Base.tab: add translations for calendar.
	* www/include/languages/Spanish.tab: ditto.
	* www/include/languages/Italian.tab: ditto.
	* www/include/languages/Japense.tab: ditto.
	* common/forum/Forum.class: patch 69: Allow non-site-wide admins
	to post news
	* cronjobs/{check_stale_tracker_items.php, db_project_sums.php,
	massmail.php,project_weekly_metric-backfill.php,
	stats_projects-backfill.php}: Commonise magic headers to
	'#! /usr/bin/php4 -f'

2002-12-24  Tim Perdue <tim@gforge.org>

	* Gantt charting added and more debugging of new Project Manager.

2002-12-23  Tim Perdue <tim@gforge.org>

	* Committing first working version of new Project Manager.
	Still needs more testing and coding.

2002-12-14  Tim Perdue <tim@gforge.org>
